[project]
name = "fishradar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.17.0",
    "amqp==5.3.1",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "asyncpg==0.30.0",
    "bcrypt==5.0.0",
    "billiard==4.2.2",
    "celery==5.5.3",
    "certifi==2025.10.5",
    "cffi==2.0.0",
    "click==8.3.0",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1.2",
    "click-repl==0.3.0",
    "colorama==0.4.6",
    "coverage==7.10.7",
    "cryptography==46.0.3",
    "dnspython==2.8.0",
    "ecdsa==0.19.1",
    "email-validator==2.3.0",
    "fastapi==0.119.0",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "iniconfig==2.1.0",
    "kombu==5.5.4",
    "mako==1.3.10",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "packaging==25.0",
    "passlib==1.7.4",
    "pluggy==1.6.0",
    "prompt-toolkit==3.0.52",
    "psycopg==3.3.0",
    "psycopg-binary==3.3.0",
    "psycopg2-binary==2.9.11",
    "pyasn1==0.6.1",
    "pycparser==2.23",
    "pydantic==2.12.0",
    "pydantic-core==2.41.1",
    "pydantic-settings==2.11.0",
    "pygments==2.19.2",
    "pymysql>=1.1.2",
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "pytest-cov==7.0.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-jose==3.5.0",
    "redis==6.4.0",
    "rich==13.9.4",
    "rsa==4.9.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.44",
    "starlette==0.48.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "uvicorn==0.37.0",
    "vine==5.1.0",
    "wcwidth==0.2.14",
]
